Add animated hero section with welcome message

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@ git push -u origin main<!DOCTYPE html>
             </div>
         </nav>
 
+        <!-- Hero Section -->
+        <section id="hero" class="hero-section">
+            <div class="hero-content">
+                <h1 class="hero-title">Welcome to My Portfolio</h1>
+                <p class="hero-subtitle">Exploring the intersection of sustainability and innovation</p>
+                <div class="hero-buttons">
+                    <a href="#about" class="cta-button">Learn More</a>
+                    <a href="#contact" class="cta-button secondary">Get in Touch</a>
+                </div>
+            </div>
+        </section>
+
         <section id="home" class="home-section">
             <div class="profile-container">
                 <div class="profile-image">
